Significantly improve full match algorithm, new solvers